--- a/nextflow.config
+++ b/nextflow.config
@@ -2,5 +2,10 @@ manifest {
     name = "Rob Syme Manta test"
 }
 
+params {
+    input = "${baseDir}/data/samplesheet.aligned.csv"
+    fasta = 's3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg19/Sequence/WholeGenomeFasta/genome.fa'
+    fai = 's3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg19/Sequence/WholeGenomeFasta/genome.fa.fai'
+}
 
 process.container = 'quay.io/nextflow/bash'
