--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ manifest {
 }
 
 params {
-    input = "${baseDir}/data/samplesheet.aligned.csv"
+    input = "${baseDir}/data/samplesheet.giab.csv"
     fasta = 's3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg19/Sequence/WholeGenomeFasta/genome.fa'
     fai = 's3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg19/Sequence/WholeGenomeFasta/genome.fa.fai'
 }
