--- a/nextflow.config
+++ b/nextflow.config
@@ -8,4 +8,4 @@ params {
     fai = 's3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg19/Sequence/WholeGenomeFasta/genome.fa.fai'
 }
 
-process.container = 'quay.io/nf-core/ubuntu:20.04'
+process.container = 'quay.io/extendedmind/tar-curl-rsync:tcr-5'
